force-app/main/default/objects/Executive_Leadership__c/Executive_Leadership__c.object-meta.xml
<CustomObject>
    <label>Executive Leadership</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Executive Leaderships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>