force-app/main/default/objects/Executive_Leadership__c/fields/EBD__c.field-meta.xml
<CustomField>
    <fullName>EBD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EBD</label>
    <referenceTo>EBD__c</referenceTo>
    <relationshipLabel>Executive Leaderships</relationshipLabel>
    <relationshipName>Executive_Leaderships</relationshipName>
    <type>Lookup</type>
</CustomField>