force-app/main/default/objects/Executive_Leadership__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Executive Leaderships</relationshipLabel>
    <relationshipName>Executive_Leaderships</relationshipName>
    <type>Lookup</type>
</CustomField>