force-app/main/default/objects/Executive_Leadership__c/fields/UHG_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>UHG_Primary_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UHG Primary Contact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>